[gd_scene load_steps=8 format=3 uid="uid://btw4v3iov0hj6"]

[ext_resource type="Script" path="res://Scenes/menus/MainMenu.gd" id="1"]
[ext_resource type="Theme" uid="uid://c8xu0q8p4s7im" path="res://resources/theme/ui_theme.tres" id="2"]
[ext_resource type="Material" uid="uid://bkokmmql66erc" path="res://materials/water_material.tres" id="3_vo8ml"]
[ext_resource type="PackedScene" uid="uid://dof4dijpd430o" path="res://models/imported/rocks/Rock001.tscn" id="4"]
[ext_resource type="Environment" uid="uid://b1ahv1bjxgfgg" path="res://world_environments/in_game_env.tres" id="4_3s865"]
[ext_resource type="Texture2D" uid="uid://dyc5dfjroavui" path="res://textures/branding/game_logo.png" id="5"]

[sub_resource type="PlaneMesh" id="1"]
size = Vector2(20, 20)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -216.0
offset_right = 216.0
offset_bottom = -18.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="BtnPlay" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnCredits" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="BtnQuit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="BtnDeleteSaveData" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Delete Save Data"

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -352.0
offset_top = -88.0
offset_right = -27.0
offset_bottom = -35.0
grow_horizontal = 0
grow_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer3/CenterContainer"]
layout_mode = 2
text = "A game made by QueenOfSquiggles
For Godot Wild Jam #41"

[node name="bg_scene" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="bg_scene"]
transform = Transform3D(1, 0, 0, 0, 0.881031, 0.473058, 0, -0.473058, 0.881031, -0.00123167, 1.561, 2.63838)
far = 10.0

[node name="MeshInstance2" type="MeshInstance3D" parent="bg_scene"]
transform = Transform3D(2.22288, 0, 0, 0, 1, 0, 0, 0, 2.22288, 0, -2.10684, 0)
material_override = ExtResource("3_vo8ml")
mesh = SubResource("1")

[node name="Rock001_" parent="bg_scene" instance=ExtResource("4")]
transform = Transform3D(0.127575, 0, 0.281525, 0.257329, 0.12536, -0.116611, -0.114183, 0.282518, 0.0517429, -1.1464, -1.35574, -1.08558)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="bg_scene"]
transform = Transform3D(-0.250181, 0.605488, 0.755509, -0.0339545, -0.785331, 0.618144, 0.967604, 0.128995, 0.217034, 6.60175, 5.492, 0)
shadow_enabled = true

[node name="ReflectionProbe" type="ReflectionProbe" parent="bg_scene"]
extents = Vector3(10, 10, 9.44467)
origin_offset = Vector3(0, 1.39648, 2.79688)
enable_shadows = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="bg_scene"]
environment = ExtResource("4_3s865")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -448.0
offset_bottom = 288.0
grow_horizontal = 0
texture = ExtResource("5")
stretch_mode = 5

[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/BtnDeleteSaveData" to="." method="_on_BtnDeleteSaveData_pressed"]
